--- a/index.html
+++ b/index.html
@@ -17,35 +17,37 @@
      <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <p style="color: red "> Hello World! </p>
+   
 
 
-    <ul>
-      <li>inline gets the first pick </li>
-      <li> interna gets the second pick/li>
-      <li> external gets the third pick</li>
-
-    </ul>
-<div
-  style="height: 250px; width :300px ;
-  background-color: blue; 
-   padding-left:40";  > 
-    
-    <p>
-
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-       Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-       nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-      sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
- 
- 
-    </div>
-
-
-    <p class="para"> doloribus expicabe icidunt magnae </p>
-    <p class="para"> doloribus expicabe icidunt magnae </p>
-    <p class="para"> doloribus expicabe icidunt magnae </p>
-    <p id="nara-para"> doloribus expicabe icidunt magnae </p>
-</body>
-</html>
+    <ol>
+      <li> Aarti Shankar</li>
+      <li>Allen-Marcus E leek </li>
+      <li>Austin Birt</li>
+      <li>Betiel Amauel</li>
+      <li>Chiston Deon sturdivant</li>
+      <li>Eyob Tamir </li>
+      <li> Hernry Gurierrez</li>
+      <li>Honey Marshall</li>
+      <li>Ldong ime lnyang </li>
+      <li>Jenny Nguyen </li>
+      <li>Justin Gondek </li>      
+       <li>Kelyn Block </li>
+       <li >kangmin kim</li>
+       <li>Lawrence Mitchell</li>
+      <li>Linda V</li>
+      <li>Lindsey Fawely</li>
+      <li>Mai Lam </li>
+      <li> Mattew wissser</li>
+      <li>Maurce HALL </li>
+      <li>Michael Parmeley </li>
+      <li>Muchi Gora </li>
+      <li>Olga Major</li>
+      <li> Othea Major</li>
+      <li> Peter Bark</li>
+      <li> Ryan H</li>
+      <li> Theo Breaux</li>
+      <li>Tomothy Hutchens</li>
+      <li> Travis James</li>
+      <li>Valerie cook</li>
+      <li>Workenesh Badose</li>
