--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
       <li> Aarti Shankar</li>
       <li>Allen-Marcus E leek </li>
       <li>Austin Birt</li>
+      <li>Angela Quang> </li>
       <li>Betiel Amauel</li>
-      <li>Chiston Deon sturdivant</li>
+      <li>Carlos Rodrigquez</li>
+      <li>Chiston sturdivant</li>
       <li>Eyob Tamir </li>
       <li> Hernry Gurierrez</li>
       <li>Honey Marshall</li>
-      <li>Ldong ime lnyang </li>
+      <li>Idong ime lnyang </li>
       <li>Jenny Nguyen </li>
       <li>Justin Gondek </li>      
        <li>Kelyn Block </li>
